--- a/crud.yml
+++ b/crud.yml
@@ -28,3 +28,29 @@ database:
   evictionInterval: 10s
   # the minimum amount of time an connection must sit idle in the pool before it is eligible for eviction
   minIdleTime: 1 minute
+
+
+# Logging settings.
+logging:
+  # The default level of all loggers. Can be OFF, ERROR, WARN, INFO, DEBUG, TRACE, or ALL.
+  level: INFO
+    # Logger-specific levels.
+  loggers:
+      # Overrides the levels of certain packages or files.
+    "org.jdbi": DEBUG
+  appenders:
+    - type: console
+      target: stdout
+      timeZone: system
+#      threshold: INFO
+    - type: file
+      # The file to which current statements will be logged.
+      currentLogFilename: ./logs/dropwizard-crud.log
+      # When the log file rotates, the archived log will be renamed to this and gzipped. The
+      # %d is replaced with the previous day (yyyy-MM-dd). Custom rolling windows can be created
+      # by passing a SimpleDateFormat-compatible format as an argument: "%d{yyyy-MM-dd-hh}".
+      archivedLogFilenamePattern: ./logs/dropwizard-crud-%d.log.gz
+      # The number of archived files to keep.
+      archivedFileCount: 5
+      # The timezone used to format dates. HINT: USE THE DEFAULT, UTC.
+      timeZone: system
