--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!--easy-i18n-->
+        <dependency>
+            <groupId>com.github.Ryan-Miao</groupId>
+            <artifactId>easy-i18n</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <!--lombok-->
         <dependency>
@@ -92,6 +98,12 @@
             <artifactId>annotations</artifactId>
             <version>19.0.0</version>
             <scope>compile</scope>
+        </dependency>
+        <!-- mvc jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.1</version>
         </dependency>
     </dependencies>
 
@@ -270,4 +282,11 @@
     </build>
 
 
+    <repositories>
+        <!--respository for easy-i18n-->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 </project>
