--- a/crud-dev.yml
+++ b/crud-dev.yml
@@ -1,11 +1,23 @@
-template: Hello, %s!
-defaultName: Stranger
+appProfile: dev
+appName: dropwizard-crud
 
+server:
+  type: default
+  adminMinThreads: 1
+  adminMaxThreads: 64
+  adminContextPath: /
+  applicationContextPath: /
+  applicationConnectors:
+    - type: http
+      port: 8080
+  adminConnectors:
+    - type: http
+      port: 8081
 
 database:
   # the name of your JDBC driver
   driverClass: com.mysql.cj.jdbc.Driver
-  # the username
+  # the appUsername
   user: dev
   # the password
   password: 123456
@@ -18,9 +30,9 @@ database:
   maxWaitForConnection: 1s
   # the SQL query to run when validating a connection's liveness
   validationQuery: "/* MyService Health Check */ SELECT 1"
-  # the minimum number of connections to keep open
+  # the minimum NUMBERS of connections to keep open
   minSize: 8
-  # the maximum number of connections to keep open
+  # the maximum NUMBERS of connections to keep open
   maxSize: 32
   # whether or not idle connections should be validated
   checkConnectionWhileIdle: false
@@ -50,7 +62,7 @@ logging:
       # %d is replaced with the previous day (yyyy-MM-dd). Custom rolling windows can be created
       # by passing a SimpleDateFormat-compatible format as an argument: "%d{yyyy-MM-dd-hh}".
       archivedLogFilenamePattern: ./logs/dropwizard-crud-%d.log.gz
-      # The number of archived files to keep.
+      # The NUMBERS of archived files to keep.
       archivedFileCount: 5
       # The timezone used to format dates. HINT: USE THE DEFAULT, UTC.
       timeZone: system
