--- a/crud-dev.yml
+++ b/crud-dev.yml
@@ -43,6 +43,8 @@ database:
   # the minimum amount of time an connection must sit idle in the pool before it is eligible for eviction
   minIdleTime: 1 minute
 
+swagger:
+  resourcePackage: com.motaharinia
 
 # Logging settings.
 logging:
