--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>8.0.18</version>
         </dependency>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.mtakaki</groupId>
             <artifactId>dropwizard-hikaricp</artifactId>
             <version>2.0.20</version>
@@ -63,6 +68,12 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-migrations</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <!--dropwizard forms (upload)-->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-forms</artifactId>
             <version>${dropwizard.version}</version>
         </dependency>
 
