--- a/pom.xml
+++ b/pom.xml
@@ -92,20 +92,27 @@
             <scope>test</scope>
         </dependency>
 
-
-
-
         <!--dropwizard guice (injection)-->
 <!--        <dependency>-->
 <!--            <groupId>com.hubspot.dropwizard</groupId>-->
 <!--            <artifactId>dropwizard-guice</artifactId>-->
 <!--            <version>1.3.5.0</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.google.inject</groupId>-->
-<!--            <artifactId>guice</artifactId>-->
-<!--            <version>5.0.1</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>ru.vyarus</groupId>
+            <artifactId>dropwizard-guicey</artifactId>
+            <version>5.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
 
         <!--grpc-->
         <dependency>
