--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <!--dropwizard-->
         <dropwizard.version>2.0.25</dropwizard.version>
+        <!--dropwizard-guicey-->
+        <dropwizard-guicey.version>5.4.1</dropwizard-guicey.version>
+        <guicey-jdbi.version>5.4.1-1</guicey-jdbi.version>
         <!--gRPC-->
         <grpc.version>1.42.1</grpc.version>
         <protobuf.version>3.19.1</protobuf.version>
@@ -93,15 +96,15 @@
         </dependency>
 
         <!--dropwizard guice (injection)-->
-<!--        <dependency>-->
-<!--            <groupId>com.hubspot.dropwizard</groupId>-->
-<!--            <artifactId>dropwizard-guice</artifactId>-->
-<!--            <version>1.3.5.0</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>ru.vyarus</groupId>
             <artifactId>dropwizard-guicey</artifactId>
-            <version>5.4.1</version>
+            <version>${dropwizard-guicey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.vyarus.guicey</groupId>
+            <artifactId>guicey-jdbi3</artifactId>
+            <version>${guicey-jdbi.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
